--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background-color: black;
+	background-color: #575349;
 }
 
 h1 {
@@ -15,7 +15,7 @@ h2 {
 .paragraph_container {
   width: 800px;
   height: 300px;
-  border: 1px solid black;
+  /*border: 1px solid black;*/
   display: -webkit-flex;
   display: flex;
   -webkit-flex-wrap: wrap;
