--- a/kkahn_site/homepage/templates/homepage/homepage.html
+++ b/kkahn_site/homepage/templates/homepage/homepage.html
@@ -1,7 +1,9 @@
-<!doctype HTML>
 <html>
 <head>
-	 <link rel="stylesheet" href="style.css">
+	 <!-- <link rel="stylesheet" href="homepage/static/style.css"> -->
+	 {% load static %}
+ 	 <link rel="stylesheet" href="{% static "homepage/style.css" %}">
+
 	<title>
 		KrishnaKahn.com
 	</title>
@@ -13,7 +15,7 @@
 	</h1>
 	<div class = "links">
 		<div class = "app_link">
-			<a href = "Scrabble.html">My Scrabble AI (not up yet)</a> || <a href="SudokuSolver/SudokuSolver.html">Sudoku Solver</a>
+			<a href = "scrabble">My Scrabble AI (not up yet)</a> || <a href="sudoku">Sudoku Solver</a>
 		</div>
 	</div>
 	<div class = "paragraph_container">
@@ -26,3 +28,4 @@
 		</p>
 	</div>
 </body>
+</html>
