--- a/kkahn_site/sudoku/templates/SudokuSolver.html
+++ b/kkahn_site/sudoku/templates/SudokuSolver.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel = "stylesheet" type = "text/css"
+  {% load static %}
+  <link rel = "stylesheet" type = "{% static "style/text.css" %}"
     href = "sudokustyle.css" media="screen" />
   <title>Recursive Sudoku Solver</title>
   <script src= "Board.js" type="text/javascript"></script>
