--- a/kkahn_site/sudoku/templates/sudoku/SudokuSolver.html
+++ b/kkahn_site/sudoku/templates/sudoku/SudokuSolver.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+  
+
+ 
   {% load static %}
-  <link rel = "stylesheet" type = "{% static "style/text.css" %}"
-    href = "sudokustyle.css" media="screen" />
+  <link rel = "stylesheet" type = "text/css"
+    href ="{% static "sudoku/sudokustyle.css" %}" media="screen" />
   <title>Recursive Sudoku Solver</title>
-  <script src= "Board.js" type="text/javascript"></script>
-  <script src="sudokuSolve.js" type="text/javascript"></script>
+  <script src= "{% static "sudoku/Board.js" %}" type="text/javascript"></script>
+  <script src="{% static "sudoku/sudokuSolve.js" %}" type="text/javascript"></script>
 
 </head>
 <body onload = "HTMLBoardInit()">
